--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,6 +7,29 @@
 
 </head>
 <body>
+
+    <header id="header">
+        <img id="header-img">
+
+        <nav id="nav-bar">
+            <ul>
+
+                <li class="nav-link" href="#"></li>
+                <li class="nav-link" href="#"></li>
+                <li class="nav-link" href="#"></li>
+                <li class="nav-link" href="#"></li>
+
+            </ul>
+        </nav>
+
+    </header>
     
+    <video id="video"></video>
+
+    <form id="form">
+        <input type="email" placeholder="email here">
+        <input type="submit" id="submit">
+    </form>
+
 </body>
-</html>>
+</html>
