--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <img id="header-img">
 
         <nav id="nav-bar">
+            <div id="icon-title">
+                <img>
+                <div>Hurltzer 571 Banana Holder</div>
+            </div>
             <ul>
-
-                <li class="nav-link" href="#"></li>
-                <li class="nav-link" href="#"></li>
-                <li class="nav-link" href="#"></li>
-                <li class="nav-link" href="#"></li>
-
+                <li class="nav-link" href="#">Features</li>
+                <li class="nav-link" href="#">How It Works</li>
+                <li class="nav-link" href="#">Reviews</li>
+                <li class="nav-link" href="#">Pricing</li>
             </ul>
         </nav>
 
