Minor html change

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Banana Slicer</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet"> 
+    <!-- <link href=" https://rawgit.com/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></link> -->
 
 </head>
 <body>
