Add nav bar buttons and corresponding linked elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
   
             
             <nav id="nav-links">
-                <a href="#" class="nav-link">Features</a>
+                <a href="#features" class="nav-link">Features</a>
+                <a href="#howItWorks" class="nav-link">How It Works</a>
+                <a href="#reviews" class="nav-link">Reviews</a>
+                <a href="#pricing" class="nav-link">Pricing</a>
+                <a href="#faq" class="nav-link">FAQ</a>
+                <a href="#orderNow" class="nav-link">Order Now</a>
             </nav>
 
             <!-- <div id="nav-links">
@@ -42,13 +47,13 @@
         Sorry your browser does not appear to allow you to view this video.  <a href="https://www.youtube.com/watch?annotation_id=annotation_3957574571&feature=iv&src_vid=1Kz7xGbgSK4&v=RMZZYYJEuPY" target="_blank">View it on YouTube</a>
     </iframe>
 
-    <form id="form">
+    <form id="form" action="https://www.freecodecamp.com/email-submit">
 
         <label for="name" id="name-label">Name: </label>
         <input type="text" id="name" placeholder="your name here" required>
 
         <label for="email" id="email-label">Email address: </label>
-        <input type="email" placeholder="email here" id="email" placeholder="your email here" required>
+        <input type="email" name="email" placeholder="email here" id="email" placeholder="your email here" required>
 
         <label for="number" id="number-label">Number of banana slicers to order:</label>
         <input type="number" id="number" min="0" max="50" placeholder="#">
@@ -97,13 +102,37 @@
 
         </div>
 
-        <input type="submit" id="submit">
+        <input type="submit" id="submit" value="submit info">
         
         <label for="text">Additional Comments</label>
         <textarea name="textarea" id="textarea">Additional Comments (e.g. delivery instructions)</textarea>
 
 
     </form>
+
+    <div id="features">
+        <p>List features here </p>
+    </div>
+
+    <div id="howItWorks">
+        <p>How it works goes here</p>
+    </div>
+
+    <div id="reviews">
+        <p>Reviews</p>
+    </div>
+
+    <div id="pricing">
+        <p>Pricing</p>
+    </div>
+
+    <div id="faq">
+        <p>FAQ</p>
+    </div>
+
+    <div id="orderNow">
+        <p>Order Now</p>
+    </div>
 
 </body>
 </html>
