--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav id="nav-bar">
             <div id="icon-title">
-                <img id="header-img" src="https://raw.githubusercontent.com/stufinn/fCCProductLandingPage/master/assets/images/banana_b.png" alt="banana icon" id="bananaLogo">
+                <a href="#firstPage"><img id="header-img" src="https://raw.githubusercontent.com/stufinn/fCCProductLandingPage/master/assets/images/banana_b.png" alt="banana icon" id="bananaLogo"></a>
                 <div id="product-title"><a href="#firstPage">Hutzler 571 Banana Slicer</a></div>
             </div>
         
@@ -184,5 +184,12 @@
 
     </div>
     
+    <script
+			  src="https://code.jquery.com/jquery-3.3.1.min.js"
+			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+              crossorigin="anonymous">
+    </script>
+    <script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
