--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#getInfoSection" class="nav-link">Info</a>
                 <a href="#reviews" class="nav-link">Reviews</a>
-                <a href="#faq" class="nav-link">FAQ</a>
+                <!-- <a href="#faq" class="nav-link">FAQ</a> -->
+                <!-- <a href="#orderNow" class="nav-link">Order Now</a> -->
+            </nav>
+
+            <!-- alternate nav links display only with small screen size -->
+            <nav id="ALT-nav-links">
+                <a href="#videoSection" class="nav-link">Vid</a>
+                <a href="#features" class="nav-link">Feat.</a>
+                <a href="#getInfoSection" class="nav-link">Info</a>
+                <a href="#reviews" class="nav-link">Revs.</a>
+                <!-- <a href="#faq" class="nav-link">FAQ</a> -->
                 <!-- <a href="#orderNow" class="nav-link">Order Now</a> -->
             </nav>
 
@@ -161,10 +171,20 @@
         </div>
 
         <div id="reviews" class="fullScreen">
-                <p>Reviews</p>
-            </div>
+                <h1>Reviews</h1>
 
-        <div id="howItWorks" class="pageSection">
+                <div id="reviewContainer">
+                    <h3>"Super duper kitchen tool!"<br><div id="quoteAttr">-some user</div></h3>
+                </div>
+
+
+            <button id="targetButton">Random Review</button>
+
+            <p id="realReviews">*Real reviews from <u><a href="https://www.amazon.com/Hutzler-571-Banana-Slicer/product-reviews/B0047E0EII/ref=cm_cr_dp_d_show_all_btm?ie=UTF8&reviewerType=all_reviews" target="_blank">Amazon</a></u></p>
+
+        </div>
+
+        <!-- <div id="howItWorks" class="pageSection">
             <p>How it works goes here</p>
         </div>
 
@@ -180,7 +200,7 @@
 
         <div id="orderNow" class="pageSection">
             <p><a href="https://www.amazon.ca/Hutzler-571-Banana-Slicer/dp/B0047E0EII">Purchase a Hutzler 571 Banana Slicer from Amazon</a></p>
-        </div>
+        </div> -->
 
     </div>
     
