--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Banana Slicer</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link href="https://fonts.googleapis.com/css?family=Kavivanar|Montserrat|Rock+Salt" rel="stylesheet"> 
-    <script src="https://rawgit.com/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
+    <script src="https://gitcdn.link/repo/freeCodeCamp/testable-projects-fcc/master/build/bundle.js"></script>
 
 </head>
 <body>
@@ -174,7 +174,7 @@
                 <h1>Reviews</h1>
 
                 <div id="reviewContainer">
-                    <h3>"Super duper kitchen tool!"<br><div id="quoteAttr">-some user</div></h3>
+                    <h3>"Maybe I'm doing it wrong, but I can't get this thing hooked up to my wifi network."<br><div id="quoteAttr">- Hubert</div></h3>
                 </div>
 
 
